--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
       <div class="starter-template">
         <h1>Abhishekgowda K S</h1>
         <img id="headshot" src="DSC_0236.JPG" alt="Mountain View">
-        <p class="lead">CEO of ABMIMASH<br> </p>
+        <p class="lead">CEO of ABMIMASH.<br>Revolution Creator </p>
       </div>
 
     </div><!-- /.container -->
