--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,13 +31,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Home</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#wan">Button1</a></li>
-            <li><a href="#too">Button2</a></li>
-            <li><a href="#phree">Button3</a></li>
+            <li class="active"><a href="#wan">Project 1</a></li>
+            <li><a href="#too">Project 2</a></li>
+            <li><a href="#phree">sign up</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
