--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#wan">Project 1</a></li>
             <li><a href="#too">Project 2</a></li>
-            <li style="float: right"><a href="#phree">sign up</a></li>
+            <div class="topnav-right"><li><a href="#phree">sign up</a></li></div>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
